--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type":"git",
+    "url":"https://github.com/pointblue/pb-api-client-gen.git"
+  },
   "author": "Point Blue Conservation Science",
   "license": "MIT",
   "dependencies": {
