--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "pb-api-client-gen",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Javascript API client generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin":{
+    "build-api":"./index.js"
   },
   "repository": {
     "type": "git",
